# CALM

./: CMakeLists.txt  Doxyfile  README.md  config.ini  events.ini  run_CALM.sh
cmake/Modules/: FindROOT.cmake
distributions/: main.cc
distributions/13.6TeV/: energyDistribution.root  kaonsDistribution.root  lambdasDistribution.root  nucleonsDistribution.root  pionsDistribution.root
distributions/13TeV/: energyDistribution.root  kaonsDistribution.root  lambdasDistribution.root  nucleonsDistribution.root  pionsDistribution.root
distributions/14TeV/: energyDistribution.root  kaonsDistribution.root  lambdasDistribution.root  nucleonsDistribution.root  pionsDistribution.root
distributions/5.02TeV/: energyDistribution.root  kaonsDistribution.root  lambdasDistribution.root  nucleonsDistribution.root  pionsDistribution.root
distributions/7TeV/: energyDistribution.root  kaonsDistribution.root  lambdasDistribution.root  nucleonsDistribution.root  pionsDistribution.root
documentation/html/: index.html
documentation/latex/: refman.tex
documentation/user_manual/: Bibfile.bib  ConfigFiles.tex  Installation.tex  Introduction.tex  Options.tex  Script.tex  WorkingScheme.tex  main.tex
include/: CALM.h  ConfigurationHolder.h  Configurator.h  Event.h  EventGenerator.h  Parser.h  Particle.h  ParticleCoor.h  ParticleDB.h  ParticleType.h  StructEvent.h  THGlobal.h  reggae.h  specrel.h
share/: config.ini  events.ini
src/: CALM.cxx  ConfigurationHolder.cxx  Configurator.cxx  Crc32.cxx  Event.cxx  EventGenerator.cxx  Parser.cxx  Particle.cxx  ParticleCoor.cxx  ParticleDB.cxx  ParticleType.cxx  calm_events.cxx  reggae.cxx  specrel.cxx
